@@ -1,6 +1,7 @@
 require 'test/unit'
 require "xmlrpc/datetime"
 
+module TestXMLRPC
 class Test_DateTime < Test::Unit::TestCase
 
   def test_new
@@ -156,4 +157,5 @@ class Test_DateTime < Test::Unit::TestCase
     XMLRPC::DateTime.new(1970, 3, 24, 12, 0, 5)
   end
 
+end
 end
